--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -13,6 +13,14 @@
 			    	<strong>Name:</strong>
 			    	<%= @classroom.name %>
             	</address>
+            	<address>
+			    	<strong>School Start Year:</strong>
+			    	<%= @classroom.school_year_start_date.year %>
+            	</address>
+            	<address>
+			    	<strong>School End Year:</strong>
+			    	<%= @classroom.school_year_end_date.year %>
+            	</address>
             	<div data-no-turbolink>
 			    	<%= link_to 'Edit', edit_classroom_path(@classroom, :school_id=>@classroom.school_id), :class=>"btn btn-success btn-xs", data: { disable_with: 'Saving...' } %>
 					<%= link_to 'Cancel', classrooms_path(:school_id=>@classroom.school_id), class: "btn btn-white btn-xs"%>
