--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -43,16 +43,6 @@
 }
 </script>
 
-  <style>
-    .lbjs {
-      float: left;
-    }
-    .lbjs:last-of-type {
-      margin-left: 20px;
-    }
-  </style>
-  
-
               <div class="row">
 	                <div class="col-sm-3">
 	                    <div class="form-group">
@@ -165,7 +155,7 @@
                 <a href="#Add" class="add"> << Add </a>
               </div>
               <div style="float:left;" id="all_classroom_div">
-                <%= select_tag "all_classroom_id", options_from_collection_for_select(Classroom.all, "id", "name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
+                <%= select_tag "all_classroom_id", options_from_collection_for_select(@school_specific_classrooms, "id", "name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
               </div>
             </div>
           </div> 
