Classroom CURD operations

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -48,7 +48,7 @@
 					        License Details
 					    </button> |
 						<%=link_to 'Student List', users_path(:school_id=>school, :role_id=>4), :class=>"btn btn-primary btn-xs"%> |
-						<%= link_to '<i title="Add Classroom" class="fa fa-users"></i>'.html_safe, classrooms_path(:school_id=>school)%> 						 
+						<%= link_to '<i title="Classroom List" class="fa fa-users"></i>'.html_safe, classrooms_path(:school_id=>school)%> 						 
 				     </td>
                  </tr>
 				 <% end %>
