--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -15,11 +15,11 @@
             	</address>
             	<address>
 			    	<strong>School Start Year:</strong>
-			    	<%= @classroom.school_year_start_date.year %>
+			    	<%= @classroom.school_year_start_date.year unless @classroom.school_year_start_date.blank? %>
             	</address>
             	<address>
 			    	<strong>School End Year:</strong>
-			    	<%= @classroom.school_year_end_date.year %>
+			    	<%= @classroom.school_year_end_date.year unless @classroom.school_year_end_date.blank?  %>
             	</address>
             	<div data-no-turbolink>
 			    	<%= link_to 'Edit', edit_classroom_path(@classroom, :school_id=>@classroom.school_id), :class=>"btn btn-success btn-xs", data: { disable_with: 'Saving...' } %>
