--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -34,6 +34,28 @@
 	                        </div>
 	                    </div>
 	               </div>
+	               <% if action_name.eql?("edit")%> 
+				   <div class="row">
+						<div class="col-sm-3">
+	                        <div class="form-group">
+	                    	    <%= label_tag "teachers_count", "Number Of School Admins", :class=>"control-label" %> : 
+								<%= @role_wise_count[0].blank? ? 0 : @role_wise_count[0] %>
+	                        </div>
+	                    </div>
+						<div class="col-sm-3">
+	                        <div class="form-group">
+	                    	    <%= label_tag "teachers_count", "Number Of Teachers", :class=>"control-label" %> : 
+								<%= @role_wise_count[1].blank? ? 0 : @role_wise_count[1] %>
+	                        </div>
+	                    </div>
+						<div class="col-sm-6">
+	                        <div class="form-group">
+			     		        <%= label_tag "students_count", "Number Of Teachers", :class=>"control-label" %> :
+								<%= @role_wise_count[2].blank? ? 0 : @role_wise_count[2] %>
+	                        </div>
+	                    </div>
+	               </div>
+				   <%end%>
 	               <div class="row">
 				       <div class="col-sm-3">
 	                       <div class="form-group">
@@ -61,6 +83,7 @@
 	                      <div class="col-sm-9">
 	                          <div class="form-group">
 	                              <div style="float:left;" id="assigned_div">
+									  <%= label_tag "teachers", "Teachers", :class=>"control-label" %>
 	                                  <%= select_tag "already_assigned_id", options_from_collection_for_select(@assigned_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 	                              </div>
 	                              <div style="float:left; vertical-align:middle; height:300px; padding:110px;">
@@ -68,7 +91,7 @@
 	                                  <a href="#Add" class="add"> << Add </a>
 	                              </div>
 	                              <div style="float:left;" id="all_div">
-	                                  <%= select_tag "all_present_id", options_from_collection_for_select(@school_specific_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
+									  <%= select_tag "all_present_id", options_from_collection_for_select(@school_specific_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 	                              </div>
 	                          </div>
 	                      </div>
@@ -78,6 +101,7 @@
   	                      <div class="col-sm-9">
   	                          <div class="form-group">
   	                              <div style="float:left;" id="student_assigned_div">
+									  <%= label_tag "studnts", "Students", :class=>"control-label" %>
   	                                  <%= select_tag "student_assigned_id", options_from_collection_for_select(@assigned_students, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
   	                              </div>
   	                              <div style="float:left; vertical-align:middle; height:300px; padding:110px;">
@@ -102,47 +126,7 @@
 <script type="text/javascript">
 	showHideMenu('li_school');
 	
-    Array.prototype.removeByValue = function(val) {
-      for(var i=0; i<this.length; i++) {
-          if(this[i] == val) {
-              this.splice(i, 1);
-              break;
-          }
-      }
-  }
-
-
-    $(function () {
-      $('select#student_assigned_id').listbox({'searchbar': true});
-      $('select#all_student_id').listbox({'searchbar': true});
-    });
-  $(document).ready(function() {
-
-    $('.remove').click(function(e) {
-      student_selected_ids = $("#student_selected_ids").val().split(" ");
-      $('#student_assigned_id option:selected').each(function(){
-        student_selected_ids.removeByValue(this.value)
-      });
-      $('#student_assigned_id option:selected').remove();
-      $("#student_selected_ids").val(student_selected_ids.join(" "));
-      $('#student_assigned_div').children('div .lbjs').remove();
-      $('select#student_assigned_id').listbox({'searchbar': true});
-    });
-
-    $('.add').on('click', function(){
-      student_selected_ids = []
-      var selectedOpts = $('#all_student_id option:selected').clone();
-      selectedOpts.each(function(i){
-        if($("#student_assigned_id option[value='"+this.value+"']").length <= 0){
-          $('#student_assigned_id').append(this);
-          student_selected_ids.push(this.value);
-        }
-      });
-      $("#student_selected_ids").val($.merge($("#student_selected_ids").val().split(" "), student_selected_ids).join(" "));
-      $('#student_assigned_div').children('div .lbjs').remove();
-      $('select#student_assigned_id').listbox({'searchbar': true});
-    });
-  });
+    
 </script>
 
 
