--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,14 +2,14 @@
   <div class="panel panel-default">
 	<div class="panel-body"> 
 	  <div class="index_page_btns" data-no-turbolink>
-		<% if @role_id.eql?('1')%>
-			<%=link_to 'Add Web Admin', new_user_path(:role_id => @role_id), :class=>"btn btn-success btn-xs"%>
-		<%elsif @role_id.eql?('2')%>
-		    <%=link_to 'Add School Admin', new_user_path(:role_id => @role_id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
-		<%elsif @role_id.eql?('3')%>
-		    <%=link_to 'Add Teacher', new_user_path(:role_id => @role_id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
-		<%elsif @role_id.eql?('4')%>
-		    <%=link_to 'Add Student', new_user_path(:role_id => @role_id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>    	
+		<% if @role_id.name.eql?('Web Admin')%>
+			<%=link_to 'Add Web Admin', new_user_path(:role_id => @role_id.id), :class=>"btn btn-success btn-xs"%>
+		<%elsif @role_id.name.eql?('School Admin')%>
+		    <%=link_to 'Add School Admin', new_user_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
+		<%elsif @role_id.name.eql?('Teacher')%>
+		    <%=link_to 'Add Teacher', new_user_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
+		<%elsif @role_id.name.eql?('Student')%>
+		    <%=link_to 'Add Student', new_user_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>    	
 		<%end%>
 		<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
 	  </div>
@@ -110,11 +110,11 @@
 
 
 <script type="text/javascript">
-	if( <%= @role_id.eql?('1')%>)
+	if( <%= @role_id.name.eql?('Web Admin')%>)
 	{
 	    showHideMenu('li_webadmin');	
 	}
-	else if(<%= @role_id.eql?('2')%>)
+	else if(<%= @role_id.name.eql?('School Admin')%>)
 	{
 	    showHideMenu('li_school');	
 	}
