--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,7 +6,7 @@
 	        </div>
 	        <div class="panel-body">
 	        	<%= form_for @user, :html=>{:class=>"form_validation user_form"} do |f| %>
-				    <%=f.hidden_field :role_id, :value=>@role_id%>
+				    <%=f.hidden_field :role_id, :value=>@role_id.id%>
 					<%=f.hidden_field :school_id, :value=>@school.id unless params[:school_id].blank?%>
 					<% if @user.errors.any? %>
 				    <div id="error_explanation">
@@ -22,14 +22,14 @@
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
 	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Saving...' } %>
-				<% if @role_id.eql?('1')%>
-					<%= link_to 'Cancel', users_path(:role_id => 1), class: "btn btn-white btn-xs"%>
-				<% elsif @role_id.eql?('2')%>
-				    <%= link_to 'Cancel', users_path(:role_id => 2, :school_id => @school.id), class: "btn btn-white btn-xs"%>
-				<% elsif @role_id.eql?('3')%>
-				    <%= link_to 'Cancel', users_path(:role_id => 3, :school_id => @school.id), class: "btn btn-white btn-xs"%>
-				<% elsif @role_id.eql?('4')%>
-				    <%= link_to 'Cancel', users_path(:role_id => 4, :school_id => @school.id), class: "btn btn-white btn-xs"%>	
+				<% if @role_id.name.eql?('Web Admin')%>
+					<%= link_to 'Cancel', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
+				<% elsif @role_id.name.eql?('School Admin')%>
+				    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+				<% elsif @role_id.name.eql?('Teacher')%>
+				    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+				<% elsif @role_id.name.eql?('Student')%>
+				    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>	
 				<%end%>
 	        </div>
 			<% end %>
@@ -40,11 +40,11 @@
 
 <script type="text/javascript">
 
-	if( <%= @role_id.eql?('1')%>)
+	if( <%= @role_id.name.eql?('Web Admin')%>)
 	{
 	    showHideMenu('li_webadmin');	
 	}
-	else if(<%= @role_id.eql?('2')%>)
+	else if(<%= @role_id.name.eql?('SChool Admin')%>)
 	{
 	    showHideMenu('li_school');	
 	}
