--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,19 +27,19 @@
 			    	<%= @user.email %>
             	</address>
 			    <div data-no-turbolink>
-					<% unless @role_id.eql?('1')%>
+					<% unless @role_id.name.eql?('Web Admin')%>
 			            <%= link_to 'Edit', edit_user_path(@user, :role_id => @user.role_id, :school_id=>@school.id), :class=>"btn btn-success btn-xs" %>
 					<%else%>
 					    <%= link_to 'Edit', edit_user_path(@user, :role_id => @user.role_id), :class=>"btn btn-success btn-xs" %>
 					<%end%>
-					<% if @role_id.eql?('1')%>
-						<%= link_to 'Cancel', users_path(:role_id => 1), class: "btn btn-white btn-xs"%>
-					<% elsif @role_id.eql?('2')%>
-					    <%= link_to 'Cancel', users_path(:role_id => 2, :school_id=>@school.id), class: "btn btn-white btn-xs"%>
-					<% elsif @role_id.eql?('3')%>
-					    <%= link_to 'Cancel', users_path(:role_id => 3, :school_id=>@school.id), class: "btn btn-white btn-xs"%>	
-					<% elsif @role_id.eql?('4')%>
-					    <%= link_to 'Cancel', users_path(:role_id => 4, :school_id=>@school.id), class: "btn btn-white btn-xs"%>
+					<% if @role_id.name.eql?('Web Admin')%>
+						<%= link_to 'Cancel', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
+					<% elsif @role_id.name.eql?('School Admin')%>
+					    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id=>@school.id), class: "btn btn-white btn-xs"%>
+					<% elsif @role_id.name.eql?('Teacher')%>
+					    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id=>@school.id), class: "btn btn-white btn-xs"%>	
+					<% elsif @role_id.name.eql?('Student')%>
+					    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id=>@school.id), class: "btn btn-white btn-xs"%>
 					<%end%>
         	    </div>
 		    </div>
@@ -47,15 +47,11 @@
     </div>
 </div>
 <script type="text/javascript">
-if( <%= @role_id.eql?('1')%>)
+if( <%= @role_id.name.eql?('Web Admin')%>)
 {
     showHideMenu('li_webadmin');	
 }
-else if(<%= @role_id.eql?('2')%>)
-{
-    showHideMenu('li_school');	
-}
-else if(<%= @role_id.eql?('3')%>)
+else if(<%= @role_id.name.eql?('School Admin')%>)
 {
     showHideMenu('li_school');	
 }
