--- a/app/views/licenses/_form.html.erb
+++ b/app/views/licenses/_form.html.erb
@@ -4,9 +4,9 @@
 	        <div class="panel-heading">
                 <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
-			<!-- <div id="id_create_license" class="alert_license_success hide">License Added</div>	
-			<div id="id_update_license" class="alert_license_success hide">License updated</div>	
-			<div id="id_archive_license" class="alert_license_success hide">License archived</div> -->
+			<div id="id_create_license" class="alert_license_success hide">License Added.</div>	
+			<div id="id_update_license" class="alert_license_success hide">License Updated.</div>	
+			<div id="id_archive_license" class="alert_license_success hide">License Archived.</div>
 	        <div class="panel-body">
 	        	<%= form_for @license, :html=>{:class=>"form_validation"}, :remote=>true  do |f| %>
 					<%= f.hidden_field :school_id, :value=>@school_id %>
@@ -48,7 +48,7 @@
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
 	            <%= f.submit "Save", class: "btn btn-primary btn-xs", data: { disable_with: 'Saving...' }%>
-				<%= link_to 'Cancel', licenses_path, class: "btn btn-white btn-xs"%>
+				<%= link_to 'Cancel', schools_path, class: "btn btn-white btn-xs"%>
 	        </div>
 			
 			<% end %>
@@ -59,10 +59,9 @@
 <script type="text/javascript">
 $(document).ready(function() {
 	showHideMenu('li_school');
-	// $('#id_create_license').removeClass('show').addClass('hide');
-	// $('#id_update_license').removeClass('show').addClass('hide');
-	// $('#id_archive_license').removeClass('show').addClass('hide');
-	
+	$('#id_create_license').removeClass('show').addClass('hide');
+	$('#id_update_license').removeClass('show').addClass('hide');
+	$('#id_archive_license').removeClass('show').addClass('hide');	
 });
 </script>
 	
