--- a/app/views/licenses/update.js.erb
+++ b/app/views/licenses/update.js.erb
@@ -1,13 +1,14 @@
 $('#license_license_batch_name').val('');
 $('#license_no_of_licenses').val('');
 $('#datepicker').val('');
+
 $('#id_license').html('<%= j(render "form") %>');
 $('#id_license_info').html('<%= j(render "licenses_info") %>')
 $('#datepicker').datepicker({ dateFormat: 'yy-mm-dd' }).val();
 
-// $('#id_update_license').removeClass('hide').addClass('show');
-// $('#id_create_license').removeClass('show').addClass('hide');
-// $('#id_archive_license').removeClass('show').addClass('hide');
+$('#id_update_license').removeClass('hide').addClass('show');
+$('#id_create_license').removeClass('show').addClass('hide');
+$('#id_archive_license').removeClass('show').addClass('hide');
 
 
 
