Completed Students module

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,6 +13,8 @@
   margin-left: 20px;
 }
 
+.assign_arrows{float:left; vertical-align:middle; height:300px; padding:110px;}
+
 .alert_license_success{ background-color: #dff0d8;border-color: #d6e9c6;color: #3c763d;padding: 10px !important;}
 
 textarea {resize:vertical;}
