--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,7 +18,9 @@
 				        </ul>
 				    </div>
 				  	<% end %>
+				<div id="parent_info">	
 	            <%= render 'common_fields', f: f %>
+				</div>
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
 	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Saving...' } %>
