--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -86,7 +86,7 @@
 									  <%= label_tag "teachers", "Teachers", :class=>"control-label" %>
 	                                  <%= select_tag "already_assigned_id", options_from_collection_for_select(@assigned_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 	                              </div>
-	                              <div style="float:left; vertical-align:middle; height:300px; padding:110px;">
+	                              <div class="assign_arrows">
 	                                  <a href="#Remove" class="remove"> Remove >> </a><br />
 	                                  <a href="#Add" class="add"> << Add </a>
 	                              </div>
@@ -104,7 +104,7 @@
 									  <%= label_tag "studnts", "Students", :class=>"control-label" %>
   	                                  <%= select_tag "student_assigned_id", options_from_collection_for_select(@assigned_students, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
   	                              </div>
-  	                              <div style="float:left; vertical-align:middle; height:300px; padding:110px;">
+  	                              <div class="assign_arrows">
   	                                  <a href="#Remove" class="remove"> Remove >> </a><br />
   	                                  <a href="#Add" class="add"> << Add </a>
   	                              </div>
