--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -4,7 +4,8 @@
 	<div class="panel-body"> 
 		<div class="index_page_btns" data-no-turbolink>
 			<%=link_to 'Import School List', import_list_schools_path, :class=>"btn btn-success btn-xs"%>
-			<%=link_to 'Download Sample', download_school_list_schools_path(:format => :xls), :class=>"btn btn-success btn-xs"%>
+			<%=link_to 'Download Sample',"", :class=>"btn btn-success btn-xs download_sample", :"data-toggle" => "modal", :"data-target" => "#download_list_modal" %>
+			
 			<% if can? :create, School %> <%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> <%end%>
 			<%=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
 			<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
@@ -79,6 +80,26 @@
   </div>
 </div>	
 
+<div class="modal fade" id="download_list_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Download Sample List</h4>
+      </div>
+      <div class="modal-body sample_list_links_div">
+		  <div id="school_admin">
+		  		<%=link_to 'Download Sample', download_school_list_schools_path(:format => :xls), :class=>"btn btn-success btn-xs"%>
+		  		<%=link_to 'Download Sample', download_school_list_schools_path(:format => :csv), :class=>"btn btn-success btn-xs"%>
+		  </div>
+	  </div>
+      <!-- <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Assign</button>
+      </div> -->
+    </div>
+  </div>
+</div>		
 
 <script type="text/javascript">
 	showHideMenu('li_school');
