--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="parent_info">
 	<div class="col-md-12">
 	    <div class="panel panel-default">
 	        <div class="panel-heading">
@@ -18,9 +18,7 @@
 				        </ul>
 				    </div>
 				  	<% end %>
-				<div id="parent_info">	
-	            <%= render 'common_fields', f: f %>
-				</div>
+		        <%= render 'common_fields', f: f %>
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
 	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Saving...' } %>
